[gd_scene load_steps=5 format=3 uid="uid://c8qaw0da164o1"]

[ext_resource type="Script" uid="uid://tyrueilgala1" path="res://Game/Blueprints/bp_entity/prefabs/bp_entity_humanoid/ik_bodyparts/ik_bodypart.gd" id="1_a0k3d"]
[ext_resource type="Script" uid="uid://ch0sgawqtkool" path="res://Game/Blueprints/bp_entity/prefabs/bp_entity_humanoid/ik_bodyparts/ik_magnet.gd" id="2_devqa"]
[ext_resource type="Script" path="res://Scripts/Utilities/transformation_lock.gd" id="2_jaj0h"]
[ext_resource type="Script" path="res://Scripts/Utilities/remote_pin.gd" id="3_e361r"]

[node name="bp_ik_bodypart" type="SkeletonIK3D"]
target_node = NodePath("ik_target")
script = ExtResource("1_a0k3d")
metadata/_custom_type_script = "uid://tyrueilgala1"

[node name="transformation_lock" type="Node" parent="."]
script = ExtResource("2_jaj0h")
is_enabled = true
do_position = true
do_rotation = true
metadata/_custom_type_script = "uid://b3lk735nihbv4"

[node name="ik_reference_root" type="BoneAttachment3D" parent="."]
use_external_skeleton = true
external_skeleton = NodePath("")

[node name="ik_reference_tip" type="BoneAttachment3D" parent="."]

[node name="ik_magnet" type="Marker3D" parent="."]
gizmo_extents = 0.1
script = ExtResource("2_devqa")
metadata/_custom_type_script = "uid://ch0sgawqtkool"

[node name="ik_target" type="Marker3D" parent="."]
gizmo_extents = 0.1

[node name="ik_default" type="Node3D" parent="."]

[node name="remote_pin" type="Node" parent="ik_default" node_paths=PackedStringArray("target")]
script = ExtResource("3_e361r")
target = NodePath("../../ik_initial")
pin_x_position = true
pin_z_position = true
metadata/_custom_type_script = "uid://dm872b4crp8tx"

[node name="ik_initial" type="Node3D" parent="."]

[node name="ik_raycast" type="RayCast3D" parent="."]
enabled = false

[node name="remote_pin" type="Node" parent="ik_raycast" node_paths=PackedStringArray("target")]
script = ExtResource("3_e361r")
target = NodePath("../../ik_reference_tip")
pin_y_position = true
metadata/_custom_type_script = "uid://dm872b4crp8tx"
